# LOCAL-AI-HACKATHON

./: .gitignore  README.md  convert_safetensors.py  dataset.py  get_total_durationwav.py  merge_json.py  pyproject.toml  run_parallel_jp.sh
src/local_ai_hackathon/: __init__.py  clean.py  yodas_cleansing.py
